--- a/.eecs230/CMakeLists.txt
+++ b/.eecs230/CMakeLists.txt
@@ -5,6 +5,11 @@ enable_testing()
 include_directories(.eecs230/include)
 include_directories(src)
 
+# UnitTest++
+set(UNITTESTCPP_ROOT .eecs230/lib/unittest-cpp)
+add_subdirectory(${UNITTESTCPP_ROOT})
+include_directories(${UNITTESTCPP_ROOT})
+
 # Adds a program with the given name and source files, and sets the
 # language to C++ 11
 macro (add_program name)
@@ -13,7 +18,13 @@ macro (add_program name)
     set_property(TARGET ${name} PROPERTY CXX_STANDARD_REQUIRED On)
 endmacro (add_program)
 
-#
+# Adds a test program with the given name and source files
+macro (add_test_program name)
+    add_program(${name} .eecs230/lib/unittest-main.cpp ${ARGN})
+    target_link_libraries(${name} UnitTest++)
+    add_test(Test_${name} ${name})
+endmacro (add_test_program)
+
 # Copy source files into build directory so that evaluation.cpp can see
 # them
 file(GLOB SRC_FILES "src/*")
@@ -34,3 +45,4 @@ endmacro (safe_add_cxx_flag)
 
 safe_add_cxx_flag(O0)           # Don't optimize
 safe_add_cxx_flag(g)            # Do include debug symbols
+
