--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 3.3)
 project(lab7 CXX)
 include(.eecs230/CMakeLists.txt)
 
-add_program(lab7 lab7.cpp)
+add_program(lab7 src/lab7.cpp)
 
